--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <!-- the footnotes stylesheet -->
-  <link rel="stylesheet" href="../dist/footnotes.css" />
+  <link rel="stylesheet" href="./dist/footnotes.css" />
   <body>
     <!-- optional, ornamental fixed header at the top of the window -->
     <div class="full-width fixed-header bg-gradient"></div>
@@ -113,6 +113,6 @@
         >version 0.0.1</code
       >
     </footer>
-    <script src="../dist/reasonable-footnotes.js"></script>
+    <script src="./dist/reasonable-footnotes.js"></script>
   </body>
 </html>
