--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		// initialize reasonable footnote
 		// documentation for available config values can be found
 		// https://matthewhowell.github.io/reasonable-footnotes/
-		reasonable_footnotes.init({ debug: true, display: 'top', allowMultipleOpenFootnotes: true, footnoteLinkText: 'original'});
+		reasonable_footnotes.init({ debug: true, display: 'top', showFootnoteLabel: false, footnoteLinkText: 'original'});
 	</script>
   </body>
 </html>
