Remove footnote location links, bug fixes

--- a/index.html
+++ b/index.html
@@ -106,25 +106,25 @@
 						<dt id="footnote-1">1</dt>
 						<dd id="footnote-content-1">
 							Like this one.
-							<a href="#footnote-location-1">↩︎︎</a>
+							<a href="#footnote-location-1" class="footnote-location">↩︎︎</a>
 						</dd>
 
 						<dt id="footnote-2">2</dt>
 						<dd id="footnote-content-2">
 							The footnote buttons are able to be focused and clicked with keyboard. The footnotes remains selectable text. And can include <strong>markup</strong> as needed.
-							<a href="#footnote-location-2">↩︎︎</a>
+							<a href="#footnote-location-2" class="footnote-location">↩︎︎</a>
 						</dd>
 
 						<dt id="footnote-3">3</dt>
 						<dd id="footnote-content-3">
 							Reasonable Footnotes is about 4KB of zero-dependency JavaScript.
-							<a href="#footnote-location-3">↩︎︎</a>
+							<a href="#footnote-location-3" class="footnote-location">↩︎︎</a>
 						</dd>
 						
 						<dt id="footnote-4">4</dt>
 						<dd id="footnote-content-4">
 							Longer footnotes will expand the footnote container vertically, but will not scroll.
-							<a href="#footnote-location-4">↩︎︎</a>
+							<a href="#footnote-location-4" class="footnote-location">↩︎︎</a>
 						</dd>
 					</dl>
 				</footer>
@@ -166,12 +166,12 @@
 			// initialize reasonable footnote
 			// documentation for available config values can be found
 			// https://matthewhowell.github.io/reasonable-footnotes/
-			// reasonable_footnotes.init({
-			// 	debug: true,
-			// 	display: 'top',
-			// 	showFootnoteLabel: false,
-			// 	footnoteLinkText: 'original',
-			// });
+			reasonable_footnotes.init({
+				debug: true,
+				display: 'top',
+				showFootnoteLabel: false,
+				footnoteLinkText: 'original',
+			});
 		</script>
 	</body>
 </html>
